--- a/roles/uwsgi/templates/agama.ini.j2
+++ b/roles/uwsgi/templates/agama.ini.j2
@@ -1,15 +1,7 @@
 [uwsgi]
-module = wsgi:application
-master = true
-processes = 5
-socket = 127.0.0.1:5000
 chdir = /opt/agama
-home = /opt/agama/venv  # If using a virtual environment
-virtualenv = /opt/agama/venv  # Adjust if needed
-user = agama
-chmod-socket = 660
-vacuum = true
-die-on-term = true
-
-# SQLite configuration
-database = /opt/agama/db.sqlite3
+module = agama:app
+env = AGAMA_DATABASE_URI=mysql+pymysql://{{ mysql_user }}:{{ mysql_password }}@{{ mysql_host }}/{{ mysql_database }}
+plugins = python3
+socket = 127.0.0.1:5000
+uid = agama
