--- a/roles/uwsgi/templates/agama.ini.j2
+++ b/roles/uwsgi/templates/agama.ini.j2
@@ -5,3 +5,4 @@ env = AGAMA_DATABASE_URI=mysql+pymysql://{{ mysql_user }}:{{ mysql_password }}@{
 plugins = python3
 socket = 127.0.0.1:5000
 uid = agama
+database = /opt/agama/db.sqlite3
