--- a/roles/uwsgi/templates/agama.ini.j2
+++ b/roles/uwsgi/templates/agama.ini.j2
@@ -1,7 +1,7 @@
 [uwsgi]
-chdir = /opt/agama
+chdir = /path/to/agama/dir
 module = agama:app
-env = AGAMA_DATABASE_URI=mysql+pymysql://{{ mysql_user }}:{{ mysql_password }}@{{ mysql_host }}/{{ mysql_database }}
+env = AGAMA_DATABASE_URI=mysql://<username>:<password>@<db-host>/<db-name>
 plugins = python3
-socket = 127.0.0.1:5000
+socket = localhost:5000
 uid = agama
