--- a/roles/bind/templates/zone.j2
+++ b/roles/bind/templates/zone.j2
@@ -1,11 +1,12 @@
 o$TTL    604800
-{{ domain_name }}.   IN  SOA {{ domain_name }}. root.{{ domain_name }}. (
+{{ domain_name }}.   IN  SOA {{ domain_name }}.  root.{{ domain_name }}. (
               2       ; Serial
          604800       ; Refresh
           86400       ; Retry
         2419200       ; Expire
          604800 )     ; Negative Cache TTL
 ;
+@ IN NS {{ domain_name }}. 
 
 {{ domain_name }}.	IN	NS	vm1
 davidayson8-1  	IN	A	192.168.42.116
