--- a/roles/bind/templates/named.conf.options.j2
+++ b/roles/bind/templates/named.conf.options.j2
@@ -11,6 +11,7 @@ options {
 		9.9.9.9;
 	};
 	
-   	 allow-query { corpnets; };
-	
+   	allow-query { corpnets; };
+	recursion yes;
+	empty-zones-enable yes;
 };
