Edited resolv config and disabled bind9 in DNS

--- a/roles/nginx/templates/default.j2
+++ b/roles/nginx/templates/default.j2
@@ -13,5 +13,11 @@ server {
 	location /prometheus {
 		proxy_pass http://localhost:9090;
 	}
+	
+	location / {
+		return 404;
+	}
 	{% endif %}
+
+	
 }
