--- a/roles/bind/templates/zone.j2
+++ b/roles/bind/templates/zone.j2
@@ -7,8 +7,10 @@ $TTL    604800
          604800 )     ; Negative Cache TTL
 ;
 
-{{ domain_name }}.	IN	NS	davidayson8-1
-davidayson8-1	IN	A	192.168.43.116
-davidayson8-2	IN	A	192.168.43.174 	
-
+{% for host in groups['dns_servers'] %}
+{{ domain_name }}. IN NS {{ host }}
+{% endfor %}
+{% for host in groups['all'] %}
+{{ host }} IN A {{ hostvars[host]['ansible_default_ipv4']['address'] }}
+{% endfor %}
 
