Updated hosts, both nginx and prometheus templates

--- a/roles/nginx/templates/default.j2
+++ b/roles/nginx/templates/default.j2
@@ -1,11 +1,15 @@
 server {
 	listen 80 default_server;
-	server_name _;
-	
+	server_name davidayson8-1;
+
 	{% if inventory_hostname in groups['web_servers'] %}
 	location / {
 		uwsgi_pass localhost:5000;
 		include uwsgi_params;
+	}
+	{% elif inventory_hostname in groups['prometheus'] %}
+	location / {
+		return 404;
 	}
 	{% endif %}
 
@@ -13,11 +17,5 @@ server {
 	location /prometheus {
 		proxy_pass http://localhost:9090;
 	}
-	
-	location / {
-		return 404;
-	}
 	{% endif %}
-
-	
 }
