--- a/roles/nginx/templates/default.j2
+++ b/roles/nginx/templates/default.j2
@@ -1,21 +1,25 @@
 server {
 	listen 80 default_server;
-	server_name davidayson8-1;
+	server_name _;
 
 	{% if inventory_hostname in groups['web_servers'] %}
 	location / {
 		uwsgi_pass localhost:5000;
 		include uwsgi_params;
 	}
-	{% elif inventory_hostname in groups['prometheus'] %}
-	location / {
-		return 404;
-	}
+
 	{% endif %}
 
 	{% if inventory_hostname in groups['prometheus'] %}
 	location /prometheus {
 		proxy_pass http://localhost:9090;
+	}
+	{% endif %}
+
+	{% if inventory_hostname in groups['grafana'] %}
+	location /grafana {
+		proxy_set_header Host $http_host;
+		proxy_pass http://localhost:3000;
 	}
 	{% endif %}
 }
