--- a/roles/nginx/templates/default.j2
+++ b/roles/nginx/templates/default.j2
@@ -4,7 +4,7 @@ server {
 
 	{% if inventory_hostname in groups['web_servers'] %}
 	location / {
-		uwsgi_pass localhost:5000;
+		uwsgi_pass localhost:{{ agama_port }};
 		include uwsgi_params;
 	}
 
@@ -19,7 +19,17 @@ server {
 	{% if inventory_hostname in groups['grafana'] %}
 	location /grafana {
 		proxy_set_header Host $http_host;
-		proxy_pass http://localhost:3000;
+		proxy_pass http://localhost:{{ grafana_port }};
 	}
 	{% endif %}
+}
+
+server {
+
+    listen 8080 default_server;
+
+    location /stub_status {
+        stub_status;
+
+    }
 }
