--- a/roles/prometheus/templates/config.yaml.j2
+++ b/roles/prometheus/templates/config.yaml.j2
@@ -1,4 +1,24 @@
 global:
+  scrape_interval: 6s
+  evaluation_interval: 6s
+
+scrape_configs:
+  - job_name: 'prometheus'
+
+    scrape_interval: 5s
+    scrape_timeout: 5s
+
+    metrics_path: '/prometheus/metrics'
+    
+    static_configs:
+      - targets: ['localhost:9090']
+
+  - job_name: linux                        
+    static_configs:
+      - targets: 
+        {% for host in groups['all'] -%}
+        - {{ host }}:9100
+        {% endfor %}global:
   scrape_interval: 15s
 
 scrape_configs:
@@ -12,4 +32,5 @@ scrape_configs:
         {% for host in groups['all'] %}
         - '{{ host }}:9100'
         {% endfor %}
+
 
