--- a/roles/prometheus/templates/config.yaml.j2
+++ b/roles/prometheus/templates/config.yaml.j2
@@ -3,6 +3,13 @@ global:
   evaluation_interval: 6s
 
 scrape_configs:
+  - job_name: 'linux'
+    static_configs:
+      - targets:
+        {% for host in groups['all'] %}
+        - {{ host }}:9100
+        {% endfor %}
+
   - job_name: 'prometheus'
     scrape_interval: 5s
     scrape_timeout: 5s
@@ -10,9 +17,34 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: linux                        
+  - job_name: 'mysql'
     static_configs:
-      - targets: 
-        {% for host in groups['all'] -%}
-        - {{ host }}:9100
+      - targets:
+        {% for host in groups['db_servers'] %}
+        - {{ host }}:9104
         {% endfor %}
+
+  - job_name: 'bind9'
+    static_configs:
+      - targets:
+        {% for host in groups['dns_servers'] %}
+        - {{ host }}:9119
+        {% endfor %}
+
+  - job_name: 'nginx'
+    static_configs:
+      - targets:
+        {% for host in groups['web_servers'] %}
+        - {{ host }}:9113
+        {% endfor %}
+
+  - job_name: 'influxdb'
+    static_configs:
+      - targets:
+        - influxdb:9424
+
+  - job_name: 'backup'
+    static_configs:
+      - targets:
+        - {{ backup_server }}:9111
+
