--- a/roles/nginx/templates/default.j2
+++ b/roles/nginx/templates/default.j2
@@ -1,37 +1,35 @@
 server {
-	listen 80 default_server;
-	server_name _;
+    listen 80 default_server;
+    server_name _;
 
-	{% if inventory_hostname in groups['agama'] %}
-	location / {
-		uwsgi_pass localhost:{{ agama_port }};
-		include uwsgi_params;
-	}
+    {% if inventory_hostname in groups['agama'] %}
+    location / {
+        uwsgi_pass localhost:5000;
+        include uwsgi_params;
+    }
+    {% endif %}
 
-	{% endif %}
+    {% if inventory_hostname in groups['prometheus'] %}
+    location /prometheus {
+        proxy_pass http://localhost:9090/prometheus;
+    }
+    location / {
+        return 404;
+    }
+    {% endif %}
 
-	{% if inventory_hostname in groups['prometheus'] %}
-	location /prometheus {
-		proxy_pass http://localhost:9090/prometheus;
-	}
-	{% endif %}
-
-	{% if inventory_hostname in groups['grafana'] %}
-	location /grafana {
-		proxy_set_header Host $http_host;
-		proxy_pass http://localhost:{{ grafana_port }};
-	}
-	{% endif %}
+    {% if inventory_hostname in groups['grafana'] %}
+    location /grafana {
+        proxy_set_header Host $http_host;
+        proxy_pass http://localhost:{{ grafana_port }};
+    
+    }
+    {% endif %}
 }
-
 server {
-
     listen 8080 default_server;
-
     location /stub_status {
         stub_status;
-		allow 127.0.0.1;
-		deny all;
-
     }
 }
+
