Lab 7 & 8 exporter, grafana fixes

--- a/roles/prometheus/templates/config.yaml.j2
+++ b/roles/prometheus/templates/config.yaml.j2
@@ -41,7 +41,9 @@ scrape_configs:
   - job_name: 'influxdb'
     static_configs:
       - targets:
-        - influxdb:9424
+      {% for host in groups['influxdb'] %}
+        - {{ host }}:9424
+      {% endfor %}
 
   - job_name: 'backup'
     static_configs:
