--- a/roles/nginx/templates/default.j2
+++ b/roles/nginx/templates/default.j2
@@ -28,8 +28,13 @@ server {
 }
 server {
     listen 8080 default_server;
+    server_name _;
+    
     location /stub_status {
         stub_status;
+        allow 127.0.0.1;
+        deny all;
     }
 }
+
 
