--- a/roles/prometheus/templates/config.yaml.j2
+++ b/roles/prometheus/templates/config.yaml.j2
@@ -49,4 +49,17 @@ scrape_configs:
     static_configs:
       - targets:
         - {{ backup_server }}:9111
+  
+  - job_name: 'keepalived'
+    static_configs
+      - targets:
+        {% for host in groups['keepalived'] %}
+          - {{ host }}:9165
+        {% endfor %}
 
+  - job_name: 'haproxy'
+    static_configs:
+      - targets:
+        {% for host in groups['haproxy'] %}
+          - {{ host }}:9101
+        {% endfor %}
