--- a/roles/influxdb/templates/influxdb.backup.cron.j2
+++ b/roles/influxdb/templates/influxdb.backup.cron.j2
@@ -1,2 +1,2 @@
-55 22 * * * backup rm -rf /home/backup/influxdb/* && influxd backup -portable -db telegraf /home/backup/influxdb
-00 23 * * * backup duplicity --no-encryption full /home/backup/influxdb/ rsync://davidayson8@backup/influxdb
+10 22 * * * backup rm -rf /home/backup/influxdb/* && influxd backup -portable -database telegraf /home/backup/influxdb
+15 22 * * * backup duplicity --no-encryption full /home/backup/influxdb/ rsync://davidayson8@backup/influxdb
