--- a/roles/haproxy/templates/haproxy.cnf.j2
+++ b/roles/haproxy/templates/haproxy.cnf.j2
@@ -40,8 +40,10 @@ listen my_ha_frontend
 backend my_ha_backend
     server docker-1-8001 lb-1:8001 check
     server docker-1-8002 lb-1:8002 check
+    server docker-1-8003 lb-1:8003 check
     server docker-2-8001 lb-2:8001 check
     server docker-2-8002 lb-2:8002 check
+    server docker-2-8003 lb-2:8003 check
 
 listen stats
     bind :9188
