--- a/roles/prometheus/templates/config.yaml.j2
+++ b/roles/prometheus/templates/config.yaml.j2
@@ -21,7 +21,7 @@ scrape_configs:
     static_configs:
       - targets:
         {% for host in groups['db_servers'] %}
-        - {{ host }}:9104
+        - db{{ host | replace ('davidayson8','') }}:9104
         {% endfor %}
 
   - job_name: 'bind9'
